Fix issues with justifySelf and alignSelf on Spatial component's container element

--- a/packages/frontend/src/layouts/Spatial/index.module.css
+++ b/packages/frontend/src/layouts/Spatial/index.module.css
@@ -4,8 +4,7 @@
 
     display: flex;
     flex-direction: column;
+    align-items: center;
 
     background-color: var(--background-secondary);
-    
-    margin: auto;
 }
